--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  packages: write
+  
 concurrency:
   group: ${{ github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
