rsx/asm: Stub out register annotation and dependency passes

--- a/rpcs3/Emu/CMakeLists.txt
+++ b/rpcs3/Emu/CMakeLists.txt
@@ -517,6 +517,8 @@ target_sources(rpcs3_emu PRIVATE
     RSX/Overlays/Shaders/shader_loading_dialog.cpp
     RSX/Overlays/Shaders/shader_loading_dialog_native.cpp
     RSX/Program/Assembler/FPToCFG.cpp
+    RSX/Program/Assembler/Passes/RegisterAnnotationPass.cpp
+    RSX/Program/Assembler/Passes/RegisterDependencyPass.cpp
     RSX/Program/CgBinaryProgram.cpp
     RSX/Program/CgBinaryFragmentProgram.cpp
     RSX/Program/CgBinaryVertexProgram.cpp
