Clans: Qt GUI configuration impl
Signed-off-by: zeph <35661622+ZephyrCodesStuff@users.noreply.github.com>

--- a/rpcs3/rpcs3qt/CMakeLists.txt
+++ b/rpcs3/rpcs3qt/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(rpcs3_ui STATIC
     camera_settings_dialog.cpp
     cg_disasm_window.cpp
     cheat_manager.cpp
+    clans_settings_dialog.cpp
     config_adapter.cpp
     config_checker.cpp
     curl_handle.cpp
